Send user details while sending reviews (#24)
* Added user library

* Added user repository config

* Added Review Response model

* Updated Review service

* Updated review controler

* Updated unit tests

* Unit tests are updated

* FIXED: unit test do not have verifyComplete statement

* FIXED: Detekt build fail

* Added user_url as env in dockerfile

* Updated workflows

* Updated deployment,yaml file for k8s

* Updated swagger documentation
